UHM-2519, prevent the status bar to overflow

--- a/omod/src/main/compass/sass/edtriageapp.scss
+++ b/omod/src/main/compass/sass/edtriageapp.scss
@@ -36,10 +36,11 @@ $fontPath: "../fonts";
 
 #sticky {
 	padding: 0.5ex;
+	height: 50px;
+	width: 940px;
 }
 
 #sticky.stick {
-	width: 50%;
 	margin-top: 0 !important;
 	position: fixed;
 	top: 0;
